改进CSS 8月26日问题

--- a/1_1_jiandang1.html
+++ b/1_1_jiandang1.html
@@ -43,7 +43,7 @@
             <a href="1_1_jiandang4.html" class="image-wrapper" ><div class=""> <img src="./images/jiandang/yinlimg_06.png" class="img-fullw"></div><p>组织建设 </p></a>
           </div>
           <div class="width-1-4">
-            <a href="1_1_jiandang5.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_09.png" class="img-fullw"></div><p>作风 </p></a>
+            <a href="1_1_jiandang5.html" class="image-wrapper" > <div class=""><img src="./images/jiandang/yinlimg_09.png" class="img-fullw"></div><p>作风建设 </p></a>
           </div>
         </div>
         <div class="half-height" style="width: 900px; margin: auto;">
