--- a/culture_1.html
+++ b/culture_1.html
@@ -45,8 +45,10 @@
 
             </div>
           </div>
-          <div class="col-md-9 rightt" >
-            <img src="./images/culture/qizhiimg_03.png">
+          <div class="col-md-9 rightpart" >
+            <div class="bodypart">
+              <img src="./images/culture/qizhiimg_03.png">
+            </div>
           </div>
         </div>
       </div>
