--- a/culture_2.html
+++ b/culture_2.html
@@ -48,9 +48,10 @@
 
           </div>
 
-          <div class="col-md-9 rightt" >
-            <img src="./images/culture/biaozhiimg_06.png">
-
+          <div class="col-md-9 rightpart" >
+            <div class="bodypart">
+              <img src="./images/culture/biaozhiimg_06.png">
+            </div>
           </div>
         </div>
       </div>
