--- a/tss_6.html
+++ b/tss_6.html
@@ -46,6 +46,62 @@
             <div class="titlepart">
             </div>
             <div id="image_list" class=" bodypart">
+              <div class="grid" style="display:none; height: 100%;">
+                            <div class="width-4-5" style=""> <!--左边60%-->
+                                <div class="height-1-4"> <!--左边上25%-->
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                        <a href="images/tss6/i1.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss6/i1.jpg" class="img-fullh"
+                                                style=""></a>
+                                    </div>
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                        <a href="images/tss6/i6.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss6/i6.jpg" class="img-fullh"
+                                                style="width-1-4"></a>
+                                    </div>
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                        <a href="images/tss6/i3.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss6/i3.jpg" class="img-fullh"
+                                                style="width-1-4"></a>
+                                    </div>
+                                    <div class="width-1-4"  style="padding:0 8px 8px 0;">
+                                        <a href="images/tss6/i4.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss6/i4.jpg" class="img-fullh"
+                                                style="width-1-4 float: right;"></a>
+                                    </div>
+                                </div>
+                                <div class="height-3-4" style="padding:0 8px 0 0;"> <!--左边下75%-->
+                                    <a href="images/tss6/i2.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss6/i2.jpg" class=""
+                                            style=" "></a>
+                                </div>
+                            </div>
+
+                            <div class="width-1-5" style=""> <!--右边20%-->
+                                <div class="height-1-4" style="padding:0 0 8px 0;">  <!--右第一行-->
+                                        <a href="images/tss6/i5.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss6/i5.jpg" class="img-fullh"
+                                                style=" "></a>
+                                </div>
+                                <div class="height-1-4" style="padding:0;">  <!--右第一行-->
+                                        <a href="images/tss6/i9.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss6/i9.jpg" class="img-fullh"
+                                                style=" "></a>
+                                </div>
+                                <div class="height-1-4" style="padding:8px 0 0 0;">  <!--右第一行-->
+                                        <a href="images/tss6/i7.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss6/i7.jpg" class=" img-fullh"
+                                                style=""></a>
+                                </div>
+                                <div class="height-1-4" style="padding:8px 0 0 0;">  <!--右第一行-->
+                                        <a href="images/tss6/i8.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss6/i8.jpg" class="img-fullh"
+                                                style=""></a>
+                                </div>
+                            </div>
+              </div>
+
+
               <div class="grid" style="display:none;">
                 <ul class="xul">
                   <li><a href="images/tss6/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss6/i3_s.png"> </a></li>
