--- a/tss_8.html
+++ b/tss_8.html
@@ -110,7 +110,7 @@
                                 </div>
                                 <div  class="height-1-4">  <!--右第一行-->
                                     <a href="images/tss8/i1.jpg" data-lightbox="lightbox"><img
-                                            src="./images/tss8/i1.jpg" class="img-fullw"
+                                            src="./images/tss8/i1_s.jpg" class="img-fullw"
                                             style=""></a>
                                 </div>
 
@@ -119,12 +119,12 @@
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
                               <div class="swiper-slide"><img src="images/tss8/i1.jpg"></div>
-                              <div class="swiper-slide"><img src="images/tss8/i2.jpg"></div>
-                              <div class="swiper-slide"><img src="images/tss8/i3.jpg"></div>
                               <div class="swiper-slide"><img src="images/tss8/i4.jpg"></div>
                               <div class="swiper-slide"><img src="images/tss8/i5.jpg"></div>
                               <div class="swiper-slide"><img src="images/tss8/i6.jpg"></div>
                               <div class="swiper-slide"><img src="images/tss8/i7.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i2.jpg"></div>
+                              <div class="swiper-slide"><img src="images/tss8/i3.jpg"></div>
                               <div class="swiper-slide"><img src="images/tss8/i8.jpg"></div>
                               <div class="swiper-slide"><img src="images/tss8/i9.jpg"></div>
                               <div class="swiper-slide"><img src="images/tss8/i10.jpg"></div>
@@ -157,6 +157,7 @@
                     <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
                             class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
                     <audio id="audio-js"  class="audio-js">
+                      <source src="audios/tss/熊岳城疗养院.ogg" type="audio/ogg" />
 
                     </audio>
                 </div>
