--- a/tdc_1.html
+++ b/tdc_1.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 
-  <div class="page  tdc-detail">
+  <div class="page tdc1 tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -53,25 +53,42 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none;">
-                <div class="i-row clearfix">
-                  <div class="i-col width-1-5">
-                    <a href="images/tdc1/i1.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i1.jpg"> </a>
+                <div class=" height-1-4" style="padding: 0 0 8px 0;">
+                  <div class=" width-1-5" style="padding: 0 8px 0 0;">
+                    <a href="images/tdc1/i2.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i2.jpg" class="img-fullh"> </a>
                   </div>
-                  <div class="i-col width-1-5">
-                    <a href="images/tdc1/i2.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i2.jpg"> </a>
+                  <div class=" width-1-5" style="padding: 0 8px 0 0;">
+                    <a href="images/tdc1/i3.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i3.jpg" class="img-fullh"> </a>
                   </div>
-                  <div class="i-col width-1-5">
-                    <a href="images/tdc1/i3.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i3.jpg"> </a>
+                  <div class=" width-1-5" style="padding: 0 8px 0 0;">
+                    <a href="images/tdc1/i4.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i4.jpg" class="img-fullh"> </a>
                   </div>
-                  <div class="i-col width-1-5">
-                    <a href="images/tdc1/i4.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i4.jpg"> </a>
+                  <div class=" width-1-5" style="padding: 0 8px 0 0;">
+                    <a href="images/tdc1/i5.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i5.jpg" class="img-fullh"> </a>
                   </div>
-                  <div class="i-col width-1-5">
-                    <a href="images/tdc1/i5.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i5.jpg"> </a>
+                  <div class=" width-1-5" style="padding: 0 8px 0 0;">
+                    <a href="images/tdc1/i6.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i6.jpg" class="img-fullh"> </a>
                   </div>
                 </div>
-                <div>
-                  <a href="images/tdc1/i6.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i6.jpg"> </a>
+                <div class=" height-1-2" style="padding: 0 8px 0 0;">
+                  <a href="images/tdc1/i1.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i1_s.jpg" class="img-fullh"> </a>
+                </div>
+                <div class=" height-1-4" style="padding: 8px 0 0 0;">
+                  <div class=" width-1-5" style="padding: 0 8px 0 0;">
+                    <a href="images/tdc1/i9.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i9.jpg" class="img-fullh"> </a>
+                  </div>
+                  <div class=" width-1-5" style="padding: 0 8px 0 0;">
+                    <a href="images/tdc1/i11.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i11.jpg" class="img-fullh"> </a>
+                  </div>
+                  <div class=" width-1-5" style="padding: 0 8px 0 0;">
+                    <a href="images/tdc1/i10.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i10.jpg" class="img-fullh"> </a>
+                  </div>
+                  <div class=" width-1-5" style="padding: 0 8px 0 0;">
+                    <a href="images/tdc1/i7.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i7.jpg" class="img-fullh"> </a>
+                  </div>
+                  <div class=" width-1-5" style="padding: 0 8px 0 0;">
+                    <a href="images/tdc1/i8.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i8.jpg" class="img-fullh"> </a>
+                  </div>
                 </div>
               </div>
               <div class="swiper swiper-container">
