--- a/tss_2.html
+++ b/tss_2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>尚品槐花主体酒店</title>
+  <title>尚品槐花主题酒店</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -31,7 +31,7 @@
         <div class="row" id="wlsp">
           <div class="col-md-3 leftpart">
             <div class="titlepart">
-              <h3>尚品槐花<br/>主体酒店</h3>
+              <h3>尚品槐花<br/>主题酒店</h3>
               <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
             </div>
             <div class=" bodypart">
@@ -75,10 +75,13 @@
 
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tss2/i1.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss2/i5.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tss2/i2.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss2/i1.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tss2/i3.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tss2/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss2/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss2/i1.jpg">	</div>
                 </div>
               </div>
             </div>
