--- a/tss_5.html
+++ b/tss_5.html
@@ -51,13 +51,13 @@
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none; height:100%;">
                 <div class="col-8max-left" style="">
-                    <a href="images/tss5/i1.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i1.jpg" class="" style="width: 100%; height: 100%;"></a>
+                    <a href="images/tss5/i1.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i1_s.jpg" class="" style=""></a>
                 </div>
 
                 <div class="col-8max-right" style="">
 
                   <div class="height-1-4" style="">
-                      <a href="images/tss5/i7.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i7.jpg" class="" style="width: 100%;  height: 100%"></a>
+                      <a href="images/tss5/i7.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i7.jpg" class="" style=""></a>
                   </div>
 
                   <div class="height-1-4" style="padding: 10px 0 0 0;">
