--- a/tss_11.html
+++ b/tss_11.html
@@ -49,21 +49,21 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="height:100%;display:none;">
-                <div style="width:50%;  height: 100%; padding: 0 5px 0  0; float:left;overflow:hidden;">
-                  <a href="images/tss11/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss11/img11_03.png" style=""></a>
+                <div class="width-1-2" style="padding: 0 5px 0  0;">
+                  <a href="images/tss11/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i6_s.jpg" class="img-fullh" style=""></a>
                 </div>
-                <div style="width:50%; height: 100%; padding: 0  0  0 5px;float:left;overflow:hidden;">
+                <div class="width-1-2" style="padding: 0  0  0 5px;">
                   <div style="width:50%; height:50%;  padding: 0 5px 5px  0;float:left;overflow:hidden;">
                     <a href="images/tss11/i1.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i1.jpg" style="height:100%;width:auto;"></a>
                   </div>
                   <div style="width:50%; height:50%;  padding: 0 0 5px 5px;float:left;overflow:hidden;">
-                    <a href="images/tss11/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i3.jpg" style="height:100%;width:auto;"></a>
+                    <a href="images/tss11/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i3_s.jpg" style="height:100%;width:auto;"></a>
                   </div>
                   <div style="width:50%; height:50%;  padding: 5px 5px 0 0;float:left;overflow:hidden;">
-                    <a href="images/tss11/i2.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i2.jpg" style="height:100%;width:auto;"></a>
+                    <a href="images/tss11/i2.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i2_s.jpg" style="height:100%;width:auto;"></a>
                   </div>
                   <div style="width:50%; height:50%;  padding: 5px 0 0 5px;float:left;overflow:hidden;">
-                    <a href="images/tss11/i9.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i9.jpg" style="height:100%;width:auto;"></a>
+                    <a href="images/tss11/i9.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i9_s.jpg" style="height:100%;width:auto;"></a>
                   </div>
 
                 </div>
@@ -99,7 +99,7 @@
             <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">              
+            <audio id="audio-js"  class="audio-js">
             </audio>
           </div>
         </div>
