--- a/tdc_6.html
+++ b/tdc_6.html
@@ -37,7 +37,7 @@
             <div class=" bodypart">
               <p class="desc typing-ani">
                 <span class="text">位于大连市松江路55号的周水子钢材市场，是大连市最大、面积达17万平方米的钢材交易市场，市场内有专用线4条，龙门吊、汽车吊等装卸机具俱全，年货物周转量50万吨。周水子钢材市场凭借优质信誉及规范管理，一直保持大连钢材市场的领先地位。
-                  
+
                 </span>
               </p>
             </div>
@@ -75,6 +75,7 @@
                   <div class="swiper-slide">	<img src="images/tdc6/i2.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc6/i3.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/tdc6/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tdc6/i1.jpg">	</div>
                 </div>
               </div>
 
