--- a/1_1_jiandang1.html
+++ b/1_1_jiandang1.html
@@ -25,7 +25,7 @@
       <div class="main-content  " style="height:70%">
         <div class="jdtou">
         <div class="titlepart2">
-                    <h3>企业愿景</h3>
+                    <h3>旗帜引领</h3>
             </div>
             <p class="half-p">集团公司党委认真贯彻党的十八大精神，用“四个全面”战略布局统一思想，全面落实从严治党要求， 紧密围绕“两学一做”学习教育和局党委、路局的工作部署，加强党的思想、组织、作风、廉政和文化建设，突出抓好党建责任制的落实、抓好班子作风能力的强化、抓好队伍整体素质的提升，为确保实现集团公司转型发展目标提供坚强有力的政治保证。</p>
             </div>
