--- a/try_1.html
+++ b/try_1.html
@@ -15,7 +15,7 @@
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div class="page  tdc-detail">
+  <div class="page try1 tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tdc_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -32,7 +32,7 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>大连地铁<br/>房地产</h3>
-              <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+              
             </div>
 
             <div class=" bodypart">
