--- a/tss_10.html
+++ b/tss_10.html
@@ -32,7 +32,7 @@
                 <div class="col-md-3 leftpart">
                     <div class="titlepart">
                         <h3>大连火车头<br>体育场</h3>
-                        <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+                        
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
@@ -101,6 +101,7 @@
                 <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up"
                                                                                   aria-hidden="true"></span> </a>
                 <audio id="audio-js"  class="audio-js">
+                  <source src="audios/tss/体育场.ogg" type="audio/ogg" />
                 </audio>
             </div>
         </div>
