--- a/tss_11.html
+++ b/tss_11.html
@@ -32,7 +32,7 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>出租车公司</h3>
-              <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+              
             </div>
             <div class=" bodypart">
               <p class="desc typing-ani">
@@ -100,6 +100,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
+              <source src="audios/tss/出租车公司.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
