--- a/tss_13.html
+++ b/tss_13.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 
-  <div class="page  tdc-detail">
+  <div class="page tss13 tdc-detail">
     <div class="container">
       <div class="logo"> <img src="./images/tss_logo.png"> </div>
       <div class="row" id="zlogo">
@@ -38,7 +38,7 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>旅顺龙头生态<br/>种植养殖基地</h3>
-              <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+              
             </div>
 
             <div class=" bodypart">
@@ -107,6 +107,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
+              <source src="audios/tss/旅顺.ogg" type="audio/ogg" />
             </audio>
           </div>
         </div>
