--- a/tss_8.html
+++ b/tss_8.html
@@ -15,7 +15,7 @@
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<div class="page  tdc-detail">
+<div class="page tss8 tdc-detail">
     <div class="container">
         <div class="logo"><img src="./images/tss_logo.png"></div>
         <div class="row" id="zlogo">
@@ -32,11 +32,11 @@
                 <div class="col-md-3 leftpart">
                     <div class="titlepart">
                         <h3>熊岳城疗养院</h3>
-                        <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+                        
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
-                            <span class="text">位于营口鲅鱼圈区熊岳城镇温泉村，有190间不同标准的客房。所有房间的用水，都来自地下深层的天然温泉，让人们随时享受大自然的恩赐。天然温泉水含有多种对人体有益的微量元素，尤以对医疗和健美皮肤有特殊功效的硫磺元素为最。露天温泉包房、台球、卡拉ok厅等多种娱乐设施，满足您一站式的健康休闲之旅。</span>
+                            <span class="text">位于营口鲅鱼圈区熊岳城镇温泉村，有190间不同标准的客房。所有房间的用水，都来自地下深层的天然温泉，让人们随时享受大自然的恩赐。天然温泉水含有多种对人体有益的微量元素，尤以对医疗和健美皮肤有特殊功效的硫磺元素为最。露天温泉包房、台球、卡拉OK厅等多种娱乐设施，满足您一站式的健康休闲之旅。</span>
                             </span>
                         </p>
                     </div>
