--- a/1_1_jiandang7.html
+++ b/1_1_jiandang7.html
@@ -2,113 +2,131 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>宣传文化建设-铁越集团</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>宣传文化建设-铁越集团</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/jiandang/yinlimg_02.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/jiandang/yinlimg_02.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>宣传文化建设</h3>
-              
-            </div>
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>宣传文化建设</h3>
 
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+                    </div>
+
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">集团党委不断加强思想教育工作、文化引领工作和舆论调控工作，形成强大的思想正能量，凝聚改革发展攻坚合力。
                 </span>
-              </p>
-            </div>
-
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <div class="width-4-5">
-                    <div class="col-1-2-top">
-                      <div class="width-1-2" style="padding:0 16px  0 0;"> <a href="images/jiandang7/i1.jpg" data-lightbox="lightbox" ><img src="./images/jiandang7/i1.jpg" class="img-fullh"> </a></div>
-                      <div class="width-1-2" style="padding:0 16px  0 0;"> <a href="images/jiandang7/i5.jpg" data-lightbox="lightbox" ><img src="./images/jiandang7/i5.jpg" class="img-fullh"> </a></div>
+                        </p>
                     </div>
-                    <div class="col-1-2-bottom">
-                      <div class="width-1-2" style="padding:0 16px  0 0;"> <a href="images/jiandang7/i7.jpg" data-lightbox="lightbox" ><img src="./images/jiandang7/i7.jpg" class="img-fullh"> </a></div>
-                      <div class="width-1-2" style="padding:0 16px  0 0;"> <a href="images/jiandang7/i2.jpg" data-lightbox="lightbox" ><img src="./images/jiandang7/i2.jpg" class="img-fullh"> </a></div>
+
+                </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
                     </div>
-                </div>
-                <div class="width-1-5">
-                  <div class="height-1-3" style="padding:0 0 8px 0;"> <a href="images/jiandang7/i6.jpg" data-lightbox="lightbox" ><img src="./images/jiandang7/i6.jpg" class="img-fullh"> </a></div>
-                  <div class="height-1-3" style="padding:8px 0;"> <a href="images/jiandang7/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang7/i3.jpg" class="img-fullh"> </a></div>
-                  <div class="height-1-3" style="padding:8px 0 0 0;"> <a href="images/jiandang7/i4.jpg" data-lightbox="lightbox" ><img src="./images/jiandang7/i4.jpg" class="img-fullh"> </a></div>
-                </div>
-              </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
+                            <div class="width-4-5">
+                                <div class="col-1-2-top">
+                                    <!--<div class="width-1-2" style="padding:0 16px  0 0;"><a-->
+                                            <!--href="images/jiandang7/i1.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/jiandang7/i1.jpg" class="img-fullh"> </a></div>-->
+                                    <div class="width-1-2" style="padding:0 16px  0 0;"><h1><font color="#ff8c00">没有图片</font></h1></div>
+                                    <div class="width-1-2" style="padding:0 16px  0 0;"><a
+                                            href="images/jiandang7/i5.jpg" data-lightbox="lightbox"><img
+                                            src="./images/jiandang7/i5.jpg" class="img-fullh"> </a></div>
+                                </div>
+                                <div class="col-1-2-bottom">
+                                    <!--<div class="width-1-2" style="padding:0 16px  0 0;"><a-->
+                                            <!--href="images/jiandang7/i7.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/jiandang7/i7.jpg" class="img-fullh"> </a></div>-->
+                                    <div class="width-1-2" style="padding:0 16px  0 0;"><h1><font color="#ff8c00">没有图片</font></h1></div>
+                                    <div class="width-1-2" style="padding:0 16px  0 0;"><a
+                                            href="images/jiandang7/i2.jpg" data-lightbox="lightbox"><img
+                                            src="./images/jiandang7/i2.jpg" class="img-fullh"> </a></div>
+                                </div>
+                            </div>
+                            <div class="width-1-5">
+                                <div class="height-1-3" style="padding:0 0 8px 0;"><a href="images/jiandang7/i6.jpg"
+                                                                                      data-lightbox="lightbox"><img
+                                        src="./images/jiandang7/i6.jpg" class="img-fullh"> </a></div>
+                                <div class="height-1-3" style="padding:8px 0;"><a href="images/jiandang7/i3.jpg"
+                                                                                  data-lightbox="lightbox"><img
+                                        src="./images/jiandang7/i3.jpg" class="img-fullh"> </a></div>
+                                <div class="height-1-3" style="padding:8px 0 0 0;"><a href="images/jiandang7/i4.jpg"
+                                                                                      data-lightbox="lightbox"><img
+                                        src="./images/jiandang7/i4.jpg" class="img-fullh"> </a></div>
+                            </div>
+                        </div>
 
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/jiandang7/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiandang7/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiandang7/i4.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiandang7/i5.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiandang7/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiandang7/i7.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiandang7/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/jiandang7/i1.jpg">	</div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/jiandang7/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiandang7/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiandang7/i4.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiandang7/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiandang7/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiandang7/i7.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiandang7/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiandang7/i1.jpg"></div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-              </div>
+
             </div>
-
-          </div>
 
         </div>
-
-      </div>
     </div>
-  </div>
-  <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+</div>
+<nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
     <div class="content">
-      <div class="col-md-3 leftpart">
-        <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-          <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-          <span>		视频 </span>
-        </a>
-      </div>
-
-      <div class="col-md-9 rightpart" >
-        <div class="pull-right">
-          <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-          <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-          <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-          <audio id="audio-js"  class="audio-js">
-            <source src="audios/party/5宣传文化建设.ogg" type="audio/ogg" />
-          </audio>
+        <div class="col-md-3 leftpart">
+            <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                <span>		视频 </span>
+            </a>
         </div>
-      </div>
-    </div>
-  </nav>
 
-  <!-- Modal -->
+        <div class="col-md-9 rightpart">
+            <div class="pull-right">
+                <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                    返回 </a>
+                <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up"
+                                                                                  aria-hidden="true"></span> </a>
+                <audio id="audio-js" class="audio-js">
+                    <source src="audios/party/5宣传文化建设.ogg" type="audio/ogg"/>
+                </audio>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<!-- Modal -->
 
 </div>
 <script src="scripts/jquery-1.9.1.min.js"></script>
