典型示范 图片样式修改 没有三张图片

--- a/1_1_jiandang8.html
+++ b/1_1_jiandang8.html
@@ -48,24 +48,41 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none;">
-                <div class="col-1-2-top">
+                <div class="col-1-2-top"> <!--一半高度-->
+                  <!--40%的宽度-->
                   <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i6.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_08.png"> </a></div>
-                  <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i1.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_03.png"> </a></div>
-                  <div class="width-1-5">
-                    <div class="col-1-2-top"><a href="images/jiangdang8/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_05.png"> </a>
+                  <!--40%的宽度-->
+                  <!--<div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i1.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_03.png"> </a></div>-->
+
+                  <!--<div class="width-1-5">-->
+                    <!--<div class="col-1-2-top"><a href="images/jiangdang8/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_05.png"> </a>-->
+                    <!--</div>-->
+                    <!--<div class="col-1-2-bottom"><a href="images/jiangdang8/i8.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_11.png"> </a>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                  <div class="width-3-5">
+                    <div class="col-1-2-top">
+                      <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_05.png"> </a></div>
+                      <!--<div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i2.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_15.png"> </a></div>-->
+                      <div class="width-1-3" style="padding: 0 16px 0 0"><h1> <font color="#ff8c00">没有图片</font> </h1> </div>
+                      <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i3.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_05.png"> </a></div>
                     </div>
-                    <div class="col-1-2-bottom"><a href="images/jiangdang8/i8.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_11.png"> </a>
+                    <div class="col-1-2-bottom">
+                      <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i8.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_11.png"> </a></div>
+                      <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i7.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_18.png"> </a></div>
+                      <div class="width-1-3" style="padding: 0 16px 0 0"> <a href="images/jiangdang8/i4.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_21.png"> </a></div>
                     </div>
                   </div>
+
                 </div>
                 <div class="col-1-2-bottom">
                   <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i2.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_15.png"> </a></div>
                   <div class="width-2-5" style="padding:0 16px  0 0;"> <a href="images/jiangdang8/i5.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_16.png"> </a></div>
                   <div class="width-1-5">
-                    <div class="col-1-2-top"><a href="images/jiangdang8/i7.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_18.png"> </a>
-                    </div>
-                    <div class="col-1-2-bottom"><a href="images/jiangdang8/i4.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_21.png"> </a>
-                    </div>
+                    <!--<div class="col-1-2-top"><a href="images/jiangdang8/i7.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_18.png"> </a>-->
+                    <div class="col-1-2-top"><h1> <font color="#ff8c00">没有图片</font> </h1> </div>
+                    <!--<div class="col-1-2-bottom"><a href="images/jiangdang8/i4.jpg" data-lightbox="lightbox" ><img src="./images/jiandang/cylist_21.png"> </a>-->
+                    <div class="col-1-2-bottom"><h1> <font color="#ff8c00">没有图片</font> </h1> </div>
                   </div>
                 </div>
               </div>
