--- a/profile_2.html
+++ b/profile_2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>大连城市物流共同配送中心</title>
+    <title>联系我们</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -15,7 +15,7 @@
     <link href="Styles/app.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="page  tdc-detail">
+    <div class="page profile2 tdc-detail">
         <div class="container">
 			<div class="logo"> <img src="./images/tdc_logo.png"> </div>
 			<div class="row" id="zlogo">
@@ -32,15 +32,29 @@
 			  	<div class="col-md-3">
 			  	</div>
 				<div class="col-md-6" style="margin-top:10%;">
-					<div class="titlepart" style="width:25%;">
+					<div class="titlepart" style="width:30%;">
 					   <h3>联系我们</h3>
-					   
 					</div>
-					<div class="dizhi">
+					<br><br><br><br>
+					<div style="margin-left: auto; 				/* 左侧边界自动显示 */
+								margin-right: auto; 				/* 右侧边界自动显示 */
+								border: 1px solid;
+								color: #f00;
+								height: 110px;
+								margin-bottom: 0px;">
+						<img style="width: auto" src="images/profile/ewm.jpg" >
+						<img style="width: auto" src="images/profile/ewm.jpg" >
+						<img style="width: auto" src="images/profile/ewm.jpg" >
+						<img style="width: auto" src="images/profile/ewm.jpg" >
+						<img style="width: auto" src="images/profile/ewm.jpg" >
+						<img style="width: auto" src="images/profile/ewm.jpg" >
+					</div>
+
+					<div class="dizhi" style="margin-top: 0px;	font-size: 50px;">
 					<b>联系电话：0411-62831289</b>
 					<br>
 					<b>地&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp址：辽宁省大连市中山区安民街11号</b>
-					</div>
+				</div>
 
 
 				</div>
