锦州地产-少N张图片

--- a/try_2.html
+++ b/try_2.html
@@ -2,119 +2,191 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>锦州锦铁房地产</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>锦州锦铁房地产</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page try2 tdc-detail">
+<div class="page try2 tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/style/tre_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/style/tre_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>锦州锦铁<br/>房地产</h3>
-              
-            </div>
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>锦州锦铁<br/>房地产</h3>
 
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+                    </div>
+
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">锦州锦铁房地产开发有限责任公司注册成立于2000年1月，注册资本869.93万元。公司主营房地产开发、建筑材料销售、商品房销售、房屋租赁、物业管理等经营业务，下辖锦州铁路房地产公司和秦皇岛沈铁房地产公司2个独立单位。截止到2016年末，共开发交付房地产项目20个，目前在建项目2个，分别是青橙社区、山海关山水宜居项目。公司年销售收入8亿元，多次获得铁路多径系统先进企业、锦州市凌河区明星企业、凌河区纳税十强企业。
                 </span>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <div class="row-1-2-left">
-                  <div class="col-1-2-top">
-                    <a href="images/try2/xtlimg_03.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_03.png" class=""></a>
-                  </div>
-                  <div class="col-1-2-bottom">
-                    <a href="images/try2/xtlimg_05.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_05.png" class=""></a>
-                  </div>
-
+                        </p>
+                    </div>
                 </div>
-                <div class="row-1-2-right">
-                  <div class="col-1-2-top">
-                    <a href="images/try2/xtlimg_10.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_10.png" class=""></a>
-                  </div>
-                  <div class="col-1-2-bottom">
-                    <a href="images/try2/xtlimg_12.png" data-lightbox="lightbox" > <img src="./images/try2/xtlimg_12.png" class=""></a>
-                  </div>
-                </div>
-              </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
 
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/try2/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/try2/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/try2/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/try2/i4.jpg">	</div>
+                            <div class="width-4-5">
+                                <div class="height-3-4">
+                                    <div class="row-1-2-left">  <!--四幅图片左半部分-->
+                                        <div class="col-1-2-top">
+                                            <a href="images/try2/xtlimg_03.png" data-lightbox="lightbox"> <img
+                                                    src="./images/try2/xtlimg_03.png" class="" style=""></a>
+                                        </div>
+                                        <div class="col-1-2-bottom">
+                                            <a href="images/try2/xtlimg_05.png" data-lightbox="lightbox"> <img
+                                                    src="./images/try2/xtlimg_05.png" class="" style="height:100%; padding: 0 0 16px 0;"></a>
+                                        </div>
+
+                                    </div>
+                                    <div class="row-1-2-right">     <!--四幅图片右半部分-->
+                                        <div class="col-1-2-top">
+                                            <a href="images/try2/xtlimg_10.png" data-lightbox="lightbox"> <img
+                                                    src="./images/try2/xtlimg_10.png" class="" style="padding-right: 16px;"></a>
+                                        </div>
+                                        <div class="col-1-2-bottom">
+                                            <a href="images/try2/xtlimg_12.png" data-lightbox="lightbox"> <img
+                                                    src="./images/try2/xtlimg_12.png" class="" style="height:100%; padding: 0 16px 16px 0;"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="height-1-4">
+                                    <div class="width-1-4">
+                                        <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
+                                                src="./images/try2/timg.jpg" style="height:100%; padding-right: 16px;"></a>
+                                    </div>
+                                    <div class="width-1-4">
+                                        <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
+                                                src="./images/try2/timg.jpg" style="height:100%; padding-right: 16px;"></a>
+                                    </div>
+                                    <div class="width-1-4">
+                                        <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
+                                                src="./images/try2/timg.jpg" style="height:100%; padding-right: 16px;"></a>
+                                    </div>
+                                    <div class="width-1-4">
+                                        <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
+                                                src="./images/try2/timg.jpg" style="height:100%; padding-right: 16px;"></a>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="width-1-5">
+                                <div class="height-1-4">
+                                    <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
+                                            src="./images/try2/timg.jpg" style="height:100%; padding-bottom: 16px;"></a>
+                                </div>
+                                <div class="height-1-4">
+                                    <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
+                                            src="./images/try2/timg.jpg" style="height:100%; padding: 0 0 16px 0;"></a>
+                                </div>
+                                <div class="height-1-4">
+                                    <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
+                                            src="./images/try2/timg.jpg" style="height:100%; padding: 0 0 16px 0;"></a>
+                                </div>
+                                <div class="height-1-4">
+                                    <a href="images/try2/timg.jpg" data-lightbox="lightbox"> <img
+                                            src="./images/try2/timg.jpg" style="height:100%;"></a>
+                                </div>
+                            </div>
+                            <!--<div class="row-1-2-left">  &lt;!&ndash;四幅图片左半部分&ndash;&gt;-->
+                            <!--<div class="col-1-2-top">-->
+                            <!--<a href="images/try2/xtlimg_03.png" data-lightbox="lightbox"> <img-->
+                            <!--src="./images/try2/xtlimg_03.png" class=""></a>-->
+                            <!--</div>-->
+                            <!--<div class="col-1-2-bottom">-->
+                            <!--<a href="images/try2/xtlimg_05.png" data-lightbox="lightbox"> <img-->
+                            <!--src="./images/try2/xtlimg_05.png" class=""></a>-->
+                            <!--</div>-->
+
+                            <!--</div>-->
+                            <!--<div class="row-1-2-right">     &lt;!&ndash;四幅图片右半部分&ndash;&gt;-->
+                            <!--<div class="col-1-2-top">-->
+                            <!--<a href="images/try2/xtlimg_10.png" data-lightbox="lightbox"> <img-->
+                            <!--src="./images/try2/xtlimg_10.png" class=""></a>-->
+                            <!--</div>-->
+                            <!--<div class="col-1-2-bottom">-->
+                            <!--<a href="images/try2/xtlimg_12.png" data-lightbox="lightbox"> <img-->
+                            <!--src="./images/try2/xtlimg_12.png" class=""></a>-->
+                            <!--</div>-->
+                            <!--</div>-->
+
+                        </div>
+
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/try2/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try2/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try2/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try2/i4.jpg"></div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
-              </div>
 
             </div>
-          </div>
-
         </div>
-      </div>
     </div>
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/try2.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" class="audio-js">
+                        <source src="audios/try2.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
-    <video class="video-js vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-      <source src="videos/沈铁青橙.webm" type="video/webm"/>
+    <video class="video-js vjs-hidden"
+           data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+        <source src="videos/沈铁青橙.webm" type="video/webm"/>
     </video>
 
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
 </body>
 </html>
